--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,7 @@
 @import './utils/variables';
+@import './utils/mixin';
 @import './utils/general';
+@import './components/btn';
 @import './components/logo';
 @import './components/header';
 @import './components/hero';
