--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,6 +1,19 @@
 .client-list {
     display: flex;
+    flex-wrap: wrap;
     gap: 30px;
+}
+
+.client-item {
+    flex-basis: calc((100% - 30px) / 2);
+
+    @include mq(tablet) {
+        flex-basis: calc((100% - 60px) / 3);
+    }
+
+    @include mq(descktop) {
+        flex-basis: calc((100% - 150px) / 6);
+    }
 }
 
 .client-link {
@@ -9,9 +22,17 @@
     justify-content: center;
     border: 1px solid $client-border;
     border-radius: 4px;
-    width: 170px;
+    width: 210px;
     height: 92px;
     transition: border-color $time $cub-bezier;
+
+    @include mq(tablet) {
+        width: 226px;
+    }
+
+    @include mq(descktop) {
+        width: 170px;
+    }
 
     &:hover,
     &:focus {
