--- a/sass/components/_flooter.scss
+++ b/sass/components/_flooter.scss
@@ -6,23 +6,60 @@
 
 .fl-box {
     display: flex;
-    align-items: baseline;
+    flex-direction: column;
+
+    @include mq(descktop) {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: baseline;
+    }
+}
+
+.fl-box12 {
+    display: flex;
+    flex-direction: column;
+
+    @include mq(tablet) {
+        flex-direction: row;
+    }
+
+    @include mq(tablet-only) {
+        justify-content: space-around;
+    }
+
+    @include mq(descktop) {
+        align-items: baseline;
+    }
 }
 
 .fl-box1 {
-    margin-right: 70px;
+    padding-bottom: 60px;
+
+    @include mq(not-descktop) {
+        text-align: center;
+    }
 }
 
 .fl-box2 {
-    margin-right: auto;
+    padding-bottom: 60px;
+
+    @include mq(descktop) {
+        margin-left: 70px;
+    }
 }
 
-.flooter address {
+.address {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     text-align: left;
     color: $white-txt-color;
+    font-style: normal;
+    margin-top: 20px;
+
+    @include mq(not-descktop) {
+        text-align: center;
+    }
 }
 
 .flooter-link {
@@ -33,17 +70,20 @@
     color: $flooter-text;
 }
 
-.address {
-    font-style: normal;
-    margin-top: 20px;
-}
-
 .adress-list {
-    margin-top: 9px;
+    margin-top: 8px;
+
+    @include mq(descktop) {
+        margin-top: 9px;
+    }
 }
 
 .address-item {
-    margin-top: 9px;
+    margin-top: 8px;
+
+    @include mq(descktop) {
+        margin-top: 9px;
+    }
 }
 
 .flooter-title {
@@ -51,20 +91,31 @@
     font-weight: 700;
     line-height: 1.14;
     letter-spacing: 0.03em;
-    text-align: left;
+    text-align: center;
     text-transform: uppercase;
     color: $white-txt-color;
+
+    @include mq(descktop) {
+        text-align: left;
+    }
 }
 
 /* ******форма підписки */
 .form-subscribe {
     display: flex;
-    align-items: center;
     margin-top: 20px;
+    flex-direction: column;
+    align-items: center;
+
+    @include mq(descktop) {
+        flex-direction: row;
+        align-items: stretch;
+    }
+
 }
 
 .inp-email {
-    width: 358px;
+    width: 450px;
     height: 50px;
     padding: 15px 16px;
     background-color: inherit;
@@ -72,7 +123,12 @@
     border-width: 1px;
     border-color: rgba(255, 255, 255, 0.3);
     color: rgba(255, 255, 255, 0.6);
-    margin-right: 12px;
+    margin-bottom: 20px;
+
+    @include mq(descktop) {
+        width: 358px;
+        margin-right: 12px;
+    }
 }
 
 .img-send {
