--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -4,9 +4,22 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    max-width: 1600px;
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 118px;
+    padding-bottom: 118px;
+
+    @include mq(mobile) {
+        max-width: 480px;
+    }
+
+    @include mq(tablet) {
+        max-width: 768px;
+    }
+
+    @include mq(descktop) {
+        max-width: 1200px;
+        padding-top: 200px;
+        padding-bottom: 200px;
+    }
 }
 
 .hero--position {
@@ -16,13 +29,20 @@
 
 .hero__title {
     color: $white-txt-color;
-    font-size: 44px;
+    font-size: 26px;
     font-weight: 900;
-    line-height: 1.36;
+    line-height: 1.62;
     letter-spacing: 0.06em;
     text-align: center;
     text-transform: uppercase;
-    width: 696px;
+    width: 360px;
+
+    @include mq(descktop) {
+        width: 696px;
+        font-size: 44px;
+        line-height: 1.36;
+    }
+
 }
 
 .hero__title-position {
