--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -6,14 +6,20 @@
     line-height: 1.19;
     letter-spacing: 0.03em;
     text-align: left;
+    padding-top: 16px;
+    padding-bottom: 16px;
 }
 
 .logo2 {
     color: $dark-txt-color;
     font-weight: 400;
+    padding-top: 16px;
+    padding-bottom: 16px;
 }
 
 .logo3 {
     color: $white-txt-color;
     font-weight: 400;
+    padding-top: 16px;
+    padding-bottom: 16px;
 }
