--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -14,16 +14,18 @@
         opacity: 0;
         visibility: hidden;
         pointer-events: none;
+
+
     }
 }
 
 .modal-wrapper {
-    width: 528px;
-    height: 581px;
     border-radius: 4px;
     background-color: $main-bcg-color;
-    padding: 40px;
     position: absolute;
+    padding: 40px;
+    width: 450px;
+    height: 609px;
     top: 50%;
     left: 50%;
     transition: transform $time $cub-bezier 200ms;
@@ -39,6 +41,12 @@
     & a {
         color: $accent-txt-color;
     }
+
+    @include mq(descktop) {
+        width: 528px;
+        height: 581px;
+    }
+
 }
 
 .modal-wrapper__close-btn {
@@ -68,10 +76,13 @@
 .modal-wrapper__title {
     font-size: 20px;
     font-weight: 700;
-    line-height: 1.15;
+    line-height: 1.5;
     letter-spacing: 0.03em;
     text-align: center;
 
+    @include mq(descktop) {
+        line-height: 1.27;
+    }
 }
 
 .modal-wrapper__title-position {
@@ -192,9 +203,13 @@
 
 .form-call-back__text-check {
     color: $secondary-txt-color;
-    font-size: 14px;
-    line-height: 1.71;
+    font-size: 12px;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     margin-left: 7px;
 
+    @include mq(descktop) {
+        font-size: 14px;
+        line-height: 1.71;
+    }
 }
