--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -1,7 +1,7 @@
 .social-list {
     display: flex;
     gap: 10px;
-    margin-top: 16px;
+    justify-content: center;
 }
 
 .social-link {
@@ -31,6 +31,7 @@
 
 .social-flooter-list {
     display: flex;
+    justify-content: center;
     gap: 10px;
     margin-top: 20px;
 }
