--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -1,3 +1,9 @@
+.works {
+    @include mq(not-descktop) {
+        display: none;
+    }
+}
+
 .works-list {
     display: flex;
     flex-wrap: wrap;
