--- a/sass/utils/_general.scss
+++ b/sass/utils/_general.scss
@@ -5,13 +5,28 @@ body {
 }
 
 .container {
-    width: $width-container;
-    padding-left: 15px;
-    padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
 
-    /* outline: tomato solid 5px; */
+    @include mq(mobile) {
+        width: 480px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    @include mq(tablet) {
+        width: 768px;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    @include mq(descktop) {
+        width: 1200px;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    //outline: tomato solid 5px;
 }
 
 .link {
@@ -60,38 +75,25 @@ p {
 }
 
 .section {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @include mq(descktop) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
 
 .section-title {
-    font-size: 36px;
+    font-size: 28px;
     font-weight: 700;
     line-height: 1.17;
-    letter-spacing: 1.08px;
+    letter-spacing: 0.03em;
     text-align: center;
-    margin-bottom: 50px;
-}
+    margin-bottom: 30px;
 
-.btn {
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 1.88;
-    letter-spacing: 0.06em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 216px;
-    height: 50px;
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
-    margin: 0 auto;
-    color: $white-txt-color;
-    background-color: $accent-txt-color;
-    box-shadow: 0px 4px 4px 0px #00000026;
-}
-
-.btn-width {
-    width: 200px;
+    @include mq(descktop) {
+        font-size: 36px;
+        margin-bottom: 50px;
+    }
 }
