--- a/css/main.css
+++ b/css/main.css
@@ -8,28 +8,22 @@ body {
 }
 
 .container {
-  margin-left: auto;
-  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
-    padding-left: 10px;
-    padding-right: 10px;
   }
 }
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
-    padding-left: 15px;
-    padding-right: 15px;
   }
 }
 @media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
   }
 }
 
@@ -368,12 +362,17 @@ p {
 }
 
 .mob-menu__link {
-  font-size: 40px;
+  font-size: 34px;
   font-weight: 500;
   line-height: 1.18;
   letter-spacing: 0.02em;
   text-align: left;
   color: #212121;
+}
+@media screen and (min-width: 380px) {
+  .mob-menu__link {
+    font-size: 40px;
+  }
 }
 .mob-menu__link .mob-menu__link:hover,
 .mob-menu__link .mob-menu__link:focus {
@@ -385,12 +384,17 @@ p {
 }
 
 .mob-menu__tel {
-  font-size: 34px;
+  font-size: 26px;
   font-weight: 500;
   line-height: 1.18;
   letter-spacing: 0.02em;
   text-align: left;
   color: #2196f3;
+}
+@media screen and (min-width: 380px) {
+  .mob-menu__tel {
+    font-size: 34px;
+  }
 }
 
 .mob-menu-item__tel {
@@ -398,12 +402,17 @@ p {
 }
 
 .mob-menu__mail {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 500;
   line-height: 1.17;
   letter-spacing: 0.02em;
   text-align: left;
   color: #757575;
+}
+@media screen and (min-width: 380px) {
+  .mob-menu__mail {
+    font-size: 24px;
+  }
 }
 
 .mob-menu-item__mail {
@@ -414,6 +423,8 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 0px;
 }
 
@@ -427,12 +438,17 @@ p {
 }
 
 .mob-menu-social_link {
-  font-size: 18px;
+  font-size: 8px;
   font-weight: 500;
   line-height: 1.22;
   letter-spacing: 0.02em;
   text-align: left;
   color: #2196f3;
+}
+@media screen and (min-width: 380px) {
+  .mob-menu-social_link {
+    font-size: 18px;
+  }
 }
 
 .hero {
@@ -443,7 +459,7 @@ p {
   background-size: cover;
   padding-top: 118px;
   padding-bottom: 118px;
-  max-width: 480px;
+  max-width: 1600px;
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
@@ -453,7 +469,6 @@ p {
 }
 @media screen and (min-width: 768px) {
   .hero {
-    max-width: 768px;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero/hero-img_md_1x.jpg");
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-img_md_1x.jpg");
   }
@@ -466,7 +481,6 @@ p {
 }
 @media screen and (min-width: 1200px) {
   .hero {
-    max-width: 1200px;
     padding-top: 200px;
     padding-bottom: 200px;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero/hero-img_lg_1x.jpg");
@@ -480,11 +494,6 @@ p {
   }
 }
 
-.hero--position {
-  margin-right: auto;
-  margin-left: auto;
-}
-
 .hero__title {
   color: #ffffff;
   font-size: 26px;
@@ -493,20 +502,18 @@ p {
   letter-spacing: 0.06em;
   text-align: center;
   text-transform: uppercase;
-  width: 360px;
+  max-width: 360px;
 }
 @media screen and (min-width: 1200px) {
   .hero__title {
-    width: 696px;
+    max-width: 696px;
     font-size: 44px;
     line-height: 1.36;
   }
 }
 
 .hero__title-position {
-  margin-bottom: 30px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto 30px auto;
 }
 
 .backdrop {
@@ -890,17 +897,6 @@ p {
 
 .team-foto {
   width: 100%;
-  height: 460px;
-}
-@media screen and (min-width: 768px) {
-  .team-foto {
-    height: 374px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .team-foto {
-    height: 260px;
-  }
 }
 
 .team-box {
@@ -1118,17 +1114,17 @@ p {
   }
 }
 
-.fl-box1 {
-  padding-bottom: 60px;
-}
 @media screen and (max-width: 1199.98px) {
   .fl-box1 {
+    padding-bottom: 60px;
     text-align: center;
   }
 }
 
-.fl-box2 {
-  padding-bottom: 60px;
+@media screen and (max-width: 1199.98px) {
+  .fl-box2 {
+    padding-bottom: 60px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .fl-box2 {
@@ -1319,6 +1315,7 @@ p {
 }
 
 .portfolio-item {
+  outline: red solid;
   background: #ffffff;
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
@@ -1342,7 +1339,13 @@ p {
 }
 
 .portfolio-link {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   color: currentColor;
   text-decoration: none;
   position: relative;
@@ -1356,6 +1359,11 @@ p {
           box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.1607843137), 0px 4px 4px 0px rgba(0, 0, 0, 0.0588235294), 0px 1px 1px 0px rgba(0, 0, 0, 0.1215686275);
 }
 
+.portfolio-box {
+  position: relative;
+  overflow: hidden;
+}
+
 .portfolio-link-box {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -1364,6 +1372,7 @@ p {
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
+  outline: green solid;
 }
 
 .portfolio-title {
@@ -1381,11 +1390,6 @@ p {
   letter-spacing: 0.03em;
   text-align: left;
   color: #757575;
-}
-
-.portfolio-box {
-  position: relative;
-  overflow: hidden;
 }
 
 .description-text {
