--- a/sass/components/_flooter.scss
+++ b/sass/components/_flooter.scss
@@ -33,15 +33,20 @@
 }
 
 .fl-box1 {
-    padding-bottom: 60px;
+    // padding-bottom: 60px;
 
     @include mq(not-descktop) {
+        padding-bottom: 60px;
         text-align: center;
     }
 }
 
 .fl-box2 {
-    padding-bottom: 60px;
+
+    //  padding-bottom: 60px;
+    @include mq(not-descktop) {
+        padding-bottom: 60px;
+    }
 
     @include mq(descktop) {
         margin-left: 70px;
