--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -61,6 +61,7 @@
 }
 
 .portfolio-item {
+    outline: red solid;
     background: $main-bcg-color;
     flex-basis: 100%;
 
@@ -79,7 +80,8 @@
 }
 
 .portfolio-link {
-    display: block;
+    display: flex;
+    flex-direction: column;
     color: currentColor;
     text-decoration: none;
     position: relative;
@@ -92,6 +94,11 @@
     }
 }
 
+.portfolio-box {
+    position: relative;
+    overflow: hidden;
+}
+
 .portfolio-link-box {
     padding-top: 20px;
     padding-bottom: 20px;
@@ -100,6 +107,7 @@
     border-bottom: 1px solid $portfolio-bcg-color;
     border-left: 1px solid $portfolio-bcg-color;
     border-right: 1px solid $portfolio-bcg-color;
+    outline: green solid;
 }
 
 .portfolio-title {
@@ -117,11 +125,6 @@
     letter-spacing: 0.03em;
     text-align: left;
     color: $secondary-txt-color;
-}
-
-.portfolio-box {
-    position: relative;
-    overflow: hidden;
 }
 
 .description-text {
