--- a/sass/utils/_general.scss
+++ b/sass/utils/_general.scss
@@ -5,25 +5,22 @@ body {
 }
 
 .container {
-    margin-left: auto;
-    margin-right: auto;
+    // margin-left: auto;
+    // margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
 
     @include mq(mobile) {
         width: 480px;
-        padding-left: 10px;
-        padding-right: 10px;
     }
 
     @include mq(tablet) {
         width: 768px;
-        padding-left: 15px;
-        padding-right: 15px;
+
     }
 
     @include mq(descktop) {
         width: 1200px;
-        padding-left: 15px;
-        padding-right: 15px;
     }
 
     //outline: tomato solid 5px;
