--- a/css/main.css
+++ b/css/main.css
@@ -1315,7 +1315,6 @@ p {
 }
 
 .portfolio-item {
-  outline: red solid;
   background: #ffffff;
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
@@ -1335,7 +1334,6 @@ p {
 
 .portfolio-img {
   width: 100%;
-  height: 294px;
 }
 
 .portfolio-link {
@@ -1353,6 +1351,7 @@ p {
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  height: 100%;
 }
 .portfolio-link:hover, .portfolio-link:focus {
   -webkit-box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.1607843137), 0px 4px 4px 0px rgba(0, 0, 0, 0.0588235294), 0px 1px 1px 0px rgba(0, 0, 0, 0.1215686275);
@@ -1372,7 +1371,9 @@ p {
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
-  outline: green solid;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .portfolio-title {
