--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -61,7 +61,6 @@
 }
 
 .portfolio-item {
-    outline: red solid;
     background: $main-bcg-color;
     flex-basis: 100%;
 
@@ -76,7 +75,7 @@
 
 .portfolio-img {
     width: 100%;
-    height: 294px;
+    // height: 294px;
 }
 
 .portfolio-link {
@@ -86,6 +85,7 @@
     text-decoration: none;
     position: relative;
     transition: box-shadow $time $cub-bezier;
+    height: 100%;
 
     &:hover,
     &:focus {
@@ -107,7 +107,7 @@
     border-bottom: 1px solid $portfolio-bcg-color;
     border-left: 1px solid $portfolio-bcg-color;
     border-right: 1px solid $portfolio-bcg-color;
-    outline: green solid;
+    flex-grow: 1;
 }
 
 .portfolio-title {
