--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -41,8 +41,8 @@
 }
 
 .hero--position {
-    // margin-right: auto;
-    // margin-left: auto;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .hero__title {
