--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,8 @@ body {
 }
 
 .container {
+  margin-left: auto;
+  margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -322,7 +324,7 @@ p {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 480px;
   height: 100%;
   padding: 48px 40px;
   z-index: 999;
@@ -342,6 +344,11 @@ p {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: none;
+  }
 }
 
 .menu-container.is-open {
@@ -492,6 +499,11 @@ p {
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero/hero-img_lg_2x.jpg");
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-img_lg_2x.jpg");
   }
+}
+
+.hero--position {
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .hero__title {
@@ -900,8 +912,14 @@ p {
 }
 
 .team-box {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+@media screen and (min-width: 1200px) {
+  .team-box {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
 }
 
 .team-title {
@@ -1394,8 +1412,8 @@ p {
 }
 
 .description-text {
-  font-size: 18px;
-  line-height: 1.6;
+  font-size: 16px;
+  line-height: 1.3;
   letter-spacing: 0.03em;
   text-align: left;
   color: #ffffff;
@@ -1406,13 +1424,25 @@ p {
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 63px 24px;
+  padding: 24px 24px;
+  overflow-y: scroll;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 380px) {
+  .description-text {
+    font-size: 18px;
+    line-height: 1.6;
+  }
+}
+@media screen and (min-width: 768px) {
+  .description-text {
+    padding: 50px 24px;
+  }
 }
 .portfolio-link:hover .description-text, .portfolio-link:focus .description-text {
   -webkit-transform: translateY(0);
