--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -127,9 +127,17 @@
     color: $secondary-txt-color;
 }
 
+.portfolio-description-box {
+    // padding: 30px 15px;
+
+    // @include mq(tablet) {
+    //     padding: 64px 24px;
+    // }
+}
+
 .description-text {
-    font-size: 18px;
-    line-height: 1.6;
+    font-size: 16px;
+    line-height: 1.3;
     letter-spacing: 0.03em;
     text-align: left;
     color: $white-txt-color;
@@ -140,7 +148,19 @@
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 63px 24px;
+    padding: 24px 24px;
+    overflow-y: scroll;
+
+
+    @media screen and (min-width: 380px) {
+        font-size: 18px;
+        line-height: 1.6;
+    }
+
+    @include mq(tablet) {
+        padding: 50px 24px;
+    }
+
     transform: translateY(100%);
     transition: transform $time $cub-bezier;
 
