--- a/sass/utils/_general.scss
+++ b/sass/utils/_general.scss
@@ -5,8 +5,8 @@ body {
 }
 
 .container {
-    // margin-left: auto;
-    // margin-right: auto;
+    margin-left: auto;
+    margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
 
@@ -74,13 +74,18 @@ p {
 }
 
 .section {
+    // margin-left: auto;
+    // margin-right: auto;
     padding-top: 60px;
     padding-bottom: 60px;
+    //width: 100%;
 
     @include mq(descktop) {
         padding-top: 94px;
         padding-bottom: 94px;
     }
+
+    //outline: green solid;
 }
 
 .section-title {
