--- a/css/main.css
+++ b/css/main.css
@@ -324,7 +324,7 @@ p {
   position: fixed;
   top: 0;
   left: 0;
-  width: 320px;
+  max-width: 480px;
   height: 100%;
   padding: 48px 40px;
   z-index: 999;
@@ -348,21 +348,6 @@ p {
 @media screen and (min-width: 768px) {
   .menu-container {
     display: none;
-  }
-}
-@media screen and (min-width: 380px) {
-  .menu-container {
-    width: 380px;
-  }
-}
-@media screen and (min-width: 450px) {
-  .menu-container {
-    width: 450px;
-  }
-}
-@media screen and (min-width: 480px) {
-  .menu-container {
-    width: 480px;
   }
 }
 
