--- a/sass/components/_mob-menu.scss
+++ b/sass/components/_mob-menu.scss
@@ -26,7 +26,8 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 320px;
+    //width: 320px;
+    max-width: 480px;
     height: 100%;
     padding: 48px 40px;
     z-index: 999;
@@ -37,17 +38,6 @@
     transform: translateX(100%);
     transition: transform $time $cub-bezier;
 
-    @media screen and (min-width: 380px) {
-        width: 380px;
-    }
-
-    @media screen and (min-width: 450px) {
-        width: 450px;
-    }
-
-    @media screen and (min-width: 480px) {
-        width: 480px;
-    }
 }
 
 .menu-container.is-open {
