--- a/css/main.css
+++ b/css/main.css
@@ -270,6 +270,11 @@ p {
     gap: 10px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .header__contact--position {
+    gap: 30px;
+  }
+}
 
 .header__contact-link {
   font-size: 14px;
@@ -338,8 +343,8 @@ p {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
+  -webkit-transform: translateX(200%);
+          transform: translateX(200%);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
