--- a/css/main.css
+++ b/css/main.css
@@ -329,7 +329,7 @@ p {
   position: fixed;
   top: 0;
   left: 0;
-  max-width: 480px;
+  width: 100%;
   height: 100%;
   padding: 48px 40px;
   z-index: 999;
@@ -343,6 +343,8 @@ p {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  margin-right: auto;
+  margin-left: auto;
   -webkit-transform: translateX(200%);
           transform: translateX(200%);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
